# ccl-demo-application

./: .gitignore  .gitmodules  buildnumber.h  buildtime.h  license.md  readme.md
applications/ccldemo/cmake/: CMakeLists.txt  CMakePresets.json  ccldemo.android.cmake  ccldemo.ios.cmake  ccldemo.linux.cmake  ccldemo.mac.cmake  ccldemo.win.cmake
applications/ccldemo/packaging/android/resource/values/: strings.xml
applications/ccldemo/packaging/ios/: CCL_Demo_Distribution.mobileprovision  Info.plist  build.sh  ccldemo.entitlements
applications/ccldemo/packaging/linux/deb/: ccldemo.package.cmake
applications/ccldemo/packaging/linux/resource/: ccldemo.desktop.in
applications/ccldemo/packaging/mac/: Info.plist  ccldemo.entitlements.in
applications/ccldemo/packaging/win/nsis/: demoapp.nsi
applications/ccldemo/resource/: cclgui.config  cclplugins.xml  commands.xml  menubar.xml  pluginfilter.xml
applications/ccldemo/resource/embedded/: alertbox.json  bitmaps.json  monopage.json  startpage.json  texteditor.json  views.json
applications/ccldemo/resource/shaders/: pixelshader.frag  pixelshader.hlsl  pixelshader.metal  vertexshader.hlsl  vertexshader.metal  vertexshader.vert
applications/ccldemo/skin/: appwindow.xml  navigator.xml  skin.xml
applications/ccldemo/skin/demos/: autofill.xml  button.xml  categories.xml  demos.xml  dialogs.xml  flexbox.xml  focus.xml  graphics.xml  graphics3d.xml  headings.xml  imageview.xml  layout.xml  network.xml  skindemo.xml  slider.xml  sprites.xml  storeapi.xml  svg.xml  system.xml  tablelayout.xml  touch.xml  treeview.xml  views.xml  workspace.xml
applications/ccldemo/source/: appversion.h  demoapp.cpp  demoapp.h  demoitem.cpp  demoitem.h
applications/ccldemo/source/demos/: buttondemo.cpp  compositiondemo.cpp  controlsdemo.cpp  coreviewdemo.h  dialogsdemo.cpp  embeddeddemo.cpp  exampletext.h  flexboxdemo.cpp  focusdemo.cpp  graphicsdemo.cpp  graphicsdemo3d.cpp  layoutdemo.cpp  networkdemo.cpp  skindemo.cpp  sliderdemo.cpp  spritedemo.cpp  storedemo.cpp  svgdemo.cpp  systemdemo.cpp  touchdemo.cpp  treeviewdemo.cpp  viewsdemo.cpp  workspacedemo.cpp
